# audioviz

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
audioviz/: __init__.py  __main__.py  audio.py  cli.py  pyproject.toml  stft.py
audioviz/audioviz/: __main__.py  cli.py  primitives.py  state_manager.py  stft.py  ui.py  visualizers.py
deployment/: Dockerfile
docs/: architecture.md  developer_guide.md
libaudioviz/: CMakeLists.txt  pyproject.toml
libaudioviz/libaudioviz/: __init__.py
libaudioviz/src/: audioviz.cpp  audioviz.h  bind.cpp  main.c  renderer.cpp  renderer.h
librenderer/: CMakeLists.txt  pyproject.toml
librenderer/librenderer/: __init__.py
librenderer/src/: bind.cpp
libviz/: CMakeLists.txt
libviz/bindings/: shm_protocol.h
libviz/src/: main.c  renderer.c  renderer.h  shm_reader.c  shm_reader.h
libviz/src/visualizers/: bars.c  bars.h
pyviz/: __init__.py  audio.py  cli.py  config.py  processor.py  transport.py
test-wavs/: README.md
tests/: conftest.py  test_audio.py  test_stft.py
tests/integration/: test_e2e.py
tests/libviz/: test_shm.c
tests/pyviz/: test_audio.py  test_processor.py  test_transport.py
tools/: mock_audio_gen.py  shm_inspector.py
