[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audioviz"
version = "0.1.0"
description = "Audio visualization with Python FFT processing"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "soundfile",
    "sounddevice",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
audioviz = "audioviz.cli:main"

[tool.setuptools]
packages = ["audioviz"]
