[build-system]
requires = ["scikit-build-core>=0.11.6", "pybind11>=3.0.1"]
build-backend = "scikit_build_core.build"

[project]
name = "libaudioviz"
version = "0.0.1"
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.scikit-build]
build-dir = "build"
wheel.packages = ["libaudioviz"]

[tool.scikit-build.cmake]
minimum-version = "3.28"
source-dir = "."
build-type = "RelWithDebInfo"
args = ["-DCMAKE_CXX_STANDARD=17"]

[tool.scikit-build.cmake.define]
CMAKE_EXPORT_COMPILE_COMMANDS = true